--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 
+backend_url="https://localhost:3000/api/v1";
+mongo_url="mongodb+srv://newuser:simple@cluster0.nezzouv.mongodb.net/ptm-sm2";
+PORT=900
