--- a/package.json
+++ b/package.json
@@ -6,20 +6,21 @@
     "server": "cross-env NODE_ENV=development nodemon backend/index.js",
     "start": "cross-env NODE_ENV=development node backend/index.js",
     "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
-    
   },
-  
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/mongoose": "^5.11.97",
     "cors": "^2.8.5",
+    "cross": "^1.0.0",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0",
     "nodemon": "^3.1.0",
+    "recoil": "^0.7.7",
     "zod": "^3.22.4"
   }
 }
